domain/src/main/java/com/example/tmdb/domain/models/errors/NoConnectionError.kt
package com.example.tmdb.domain.models.errors

data object NoConnectionError : Error()